Test Sandbox Project/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Additional_Phone__c</fullName>
        <label>Additional_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Browser_Other__c</fullName>
        <label>Browser_Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Android webview</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>Edge (Microsoft)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating_System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Macintosh</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Blackberry</fullName>
                </value>
                <value>
                    <fullName>Windows phone</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_OS__c</fullName>
        <label>Other_OS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Followers__c</fullName>
        <label>Social Followers</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SocialDetails_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SocialDetails</label>
        <referenceTo>SocialPersona</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wootric__Current_NPS_score__c</fullName>
        <description>Current NPS score from the most recent Wootric NPS survey.</description>
        <inlineHelpText>Wootric&apos;s most recent Net Promoter Score (NPS) score for this person.</inlineHelpText>
        <label>Current NPS score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wootric__Customer_Id__c</fullName>
        <description>Customer provided unique Id provided to Wootric to identify Contact</description>
        <externalId>true</externalId>
        <inlineHelpText>Customer provided unique Id provided to Wootric to identify Contact</inlineHelpText>
        <label>Customer Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wootric__Last_Decline_Date__c</fullName>
        <description>Date and time of last Wootric NPS survey Decline</description>
        <inlineHelpText>Date and time of last Wootric NPS survey Decline</inlineHelpText>
        <label>Last Decline Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wootric__Last_Response_Date__c</fullName>
        <description>Date and time of last Wootric NPS survey Response</description>
        <inlineHelpText>Date and time of last Wootric NPS survey Response</inlineHelpText>
        <label>Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wootric__NPS_change__c</fullName>
        <description>The % change in NPS score from the previous time they answered the Wootric Net Promoter Score survey.</description>
        <formula>IF(Wootric__Previous_NPS_score__c &gt; 0, 
(Wootric__Current_NPS_score__c - Wootric__Previous_NPS_score__c) / Wootric__Previous_NPS_score__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% change in Net Promoter Score answer for this contact.</inlineHelpText>
        <label>NPS % change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wootric__Previous_NPS_score__c</fullName>
        <description>This field shows the NPS score for this contact from the previous time they answered the Wootric NPS survey.</description>
        <inlineHelpText>Previous Net Promoter Score (NPS) for this contact.</inlineHelpText>
        <label>Previous NPS score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wootric__Promoter_Level_PickList__c</fullName>
        <description>Wootric NPS Promoter Level Picklist set from current score. Used for Reports and Dashboards.</description>
        <inlineHelpText>This pick-list should not be added to the Contact or Person Account layout, as it is intended for use by the Wootric Reporting, and should not be manually edited.</inlineHelpText>
        <label>Promoter Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                    <color>#FF6666</color>
                </value>
                <value>
                    <fullName>Passive</fullName>
                    <color>#33CCFF</color>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                    <color>#78C953</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wootric__Promoter_Level__c</fullName>
        <description>NPS Promoter Level from last NPS Score</description>
        <formula>IF( NOT(ISBLANK( Wootric__Current_NPS_score__c )) , 
 IF( Wootric__Current_NPS_score__c &lt; 7, &quot;Detractor&quot;, 
 IF( Wootric__Current_NPS_score__c &gt;= 9, &quot;Promoter&quot;, &quot;Passive&quot;) ) , 
&quot;&quot;)</formula>
        <inlineHelpText>Wootric Promoter Level for most recent NPS Score</inlineHelpText>
        <label>Promoter Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wootric__Wootric_Id__c</fullName>
        <description>Wootric unique Id used for identifying Contact</description>
        <externalId>true</externalId>
        <inlineHelpText>Wootric unique Id used for identifying Contact</inlineHelpText>
        <label>Wootric Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the contact that came for creation to get updated again thereby preventing the loop</description>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__zendesk_id__c</fullName>
        <label>Zendesk User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_Browser_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Browser__c, &apos;Other&apos;)  &amp;&amp;   ISBLANK( Browser_Other__c )</errorConditionFormula>
        <errorDisplayField>Browser_Other__c</errorDisplayField>
        <errorMessage>You Must enter the Browser type before continueing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_OS_Types</fullName>
        <active>true</active>
        <description>To capture other Operating system</description>
        <errorConditionFormula>ISPICKVAL(Operating_System__c, &apos;Other&apos;) &amp;&amp;  ISBLANK( Other_OS__c )</errorConditionFormula>
        <errorDisplayField>Other_OS__c</errorDisplayField>
        <errorMessage>You must enter a value for the operating system prior saving.</errorMessage>
    </validationRules>
</CustomObject>